# soaptool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/soaptool/: bundle.py  cli.py  manifest.py  skeleton.py  utils.py  wsdl_parser.py  xsd_index.py
src/soaptool/generators/: postman.py  xml.py
tests/: test_cli_flow.py
tests/fixtures/simple/: common.xsd  simple.wsdl
