
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soaptool"
version = "0.1.0"
description = "Bundle, inspect, validate, and generate artifacts from WSDL/XSD contracts."
readme = "README.md"
authors = [{name = "Ron XWR"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "lxml>=5.2.0",
]
keywords = ["soap", "wsdl", "xsd", "postman", "xml", "schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
soaptool = "soaptool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
